antonio_ramos/session-01/exercise-03/rds-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mariadb
  namespace: exercise-03
  labels:
    app: wordpress
    tier: backend
spec:
  ports:
  - name: mysql-port
    port: 3306
  selector:
    app: wordpress
    tier: backend
  type: ExternalName
  externalName: invalidname.rds.amazonaws.com
