antonio_ramos/session-01/exercise-03/ingress-admin.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: wordpress-rewrite-ingress
  namespace: exercise-03
  annotations:
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/session-cookie-name: "route"
    nginx.ingress.kubernetes.io/session-cookie-hash: "sha1"
    nginx.ingress.kubernetes.io/rewrite-target: /wp-admin
spec:
  tls:
  - hosts: 
    - wordpress-exercise-03.com
    secretName: tls-secret
  rules:
  - host: wordpress-exercise-03.com
    http:
      paths:
      - path: "/mycustom-admin"
        backend:
          serviceName: wordpress-svc
          servicePort: 80
